Minor responsive fix (not responsive yet)

--- a/css/find.css
+++ b/css/find.css
@@ -9,47 +9,49 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 14vw 10vw;
+    padding: 14vw 10vw 10vw 10vw;
 }
 
-#find-section h2 {
-    font-size: 30pt;
-    margin: 0;
+#find-section h1 {
+    font-size: 3vw;
+    margin: 0.1em 0 0 0;
 }
 
 #find-section h5 {
-    font-size: 12pt;
-    margin: 2em 0;
+    font-size: 1vw;
+    margin: 1em 0 2em 0;
+    ;
 }
 
 #find-section-input {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    margin: 1vw 0;
 }
 
 #find-section-input input {
     padding: 1em;
     background: transparent;
     border: 1px solid #4B4B4B;
-    font-size: 11pt;
+    font-size: 1vw;
     border-radius: 0.5em;
     margin-right: 3em;
 }
 
 #find-button {
-    font-size: 12pt;
+    font-size: 1vw;
     border: 1px solid #4B4B4B;
 }
 
 #flying-icons {
     display: flex;
-    margin: 50px 0;
+    margin: 3vw 0;
 }
 
 #flying-icons div {
     background: #4B4B4B;
-    font-size: 18pt;
+    font-size: 1.2vw;
     width: 3em;
     height: 3em;
     margin: 0 1em;
