--- a/css/navbar.css
+++ b/css/navbar.css
@@ -4,12 +4,12 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 40px 0;
+    padding: 1em 0;
 }
 
 #logo {
     color: #ebcb80;
-    font-size: 30pt;
+    font-size: 3vw;
     user-select: none;
 }
 
@@ -20,8 +20,8 @@
 }
 
 #navigation div {
-    font-size: 12pt;
-    margin: 0 3px;
+    font-size: 1vw;
+    margin: 0 0.5em;
 }
 
 #navigation div:nth-last-child(1) {
