--- a/css/plan.css
+++ b/css/plan.css
@@ -5,7 +5,7 @@
 
 #plan-section h1 {
     text-align: center;
-    font-size: 30pt;
+    font-size: 3vw;
     margin-bottom: 2em;
     color: white;
 }
